2011-06-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3323427 ] Unnecessary NULL check in httpAdapter

	* control.c:
	[ 3323422 ] Unnecessary NULL check in control.c

2011-06-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3314762 ] Memory leak in method invoke using SFCB local interface
	(patch by Chris Poblete)

	* control.c:
	[ 3165732 ] Add ability for client library to specify configuration file
	(patch by Josef Moellers)

2011-06-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c, cimcClientSfcbLocal.c:
	[ 3314383 ] Memory leak in CimResource_Enumerate_EP
	(patch by Chris Poblete)

	* Makefile.am
	[ 3047562 ] [patch] Create bzip2 tarballs on "make dist"
	(patch by Klaus Kampf)
	
2011-06-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 3310364 ] Implement CIM_NamespaceInManager

2011-06-01  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* control.c, genSslCert.sh, httpAdapter.c, sfcb.cfg.pre.in
	[ 3259627 ] provide a list acceptable CAs to client

2011-05-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* 10_interop.mof, default.reg.in, interopServerProvider.c, 
	test/xmltest/enumerateinstancenames.ComMech.lines:
	[ 3309374 ] Implement CIM_CIMXMLCommunicationMechanism

2011-05-27 Narasimha Sharoff <nsharoff@us.ibm.com>

	* Makefile.am
	[ 3199899 ] sfcb uninstall process should remove test mof's

2011-05-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c
	[ 3296541 ] CIM_IndicationSubscription corrupts after delilvery fails 

2011-05-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimRequest.c:
	[ 3300167 ] Memory leaks caused by cimRequest changes

2011-05-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopServerProvider.c
	[ 3287789 ] interopServerProvider not conservative when answering reqs

2011-05-09  Chris Buccella  <buccella@linux.vnet.ibm.com>
