@@ -91,6 +91,7 @@ Bugs Fixed:
 - 3165732 Add ability for client library to specify configuration file
 - 3323422 Unnecessary NULL check in control.c
 - 3323427 Unnecessary NULL check in httpAdapter
+- 3324214 Remove dead code from providerDrv:loadProvider()
 
 Changes in 1.3.11
 =================
